[package]
name = "crc_all_macros"
version = "0.1.0"
authors = ["nanpuyue <nanpuyue@gmail.com>"]
edition = "2021"
description = "crc_all procedural macros"
homepage = "https://github.com/nanpuyue/crc_all"
repository = "https://github.com/nanpuyue/crc_all"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true
